assets/css/settings-styles.css
/* ... */
.wcpdf_document_settings_sections {
	margin-bottom: 40px;
	border: 1px solid #eaeaea;
	overflow: hidden;
}

.wcpdf_document_settings_sections > h2 {
	cursor: pointer;
	padding: 1em 0.8em;
	margin: 0;
}

.wcpdf_document_settings_sections ul {
	background: white;
	list-style: none;
	margin: 0;
	padding: 0;
	width: 100%;
	display: block;
	height: auto;
	display: none;
}

.wcpdf_document_settings_sections ul.active {
	display: block;
}

.wcpdf_document_settings_sections ul li {
	box-sizing: border-box;
	padding: 0;
	margin-bottom: 0;
	border-top: 1px solid #eaeaea;
	font-size: 1.1em;
}

.wcpdf_document_settings_sections ul li:hover {
	cursor: pointer;
	background: #51266b;
	color: white;
}

.wcpdf_document_settings_sections ul li:hover a {
	color: white;
}

.wcpdf_document_settings_sections ul li a {
	color: black;
	text-decoration: none;
	padding: 1.2em 1.6em;
	display: block;
}

.wcpdf_document_settings_sections .arrow-down {
	font-size: 0.7em;
	color: #999;
	margin-left: 8px;
	font-weight: normal;
	float: right;
}

.wcpdf_document_settings_sections p:hover,
.wcpdf_document_settings_sections p:hover > .arrow-down { 
	color: #222;
}

.edit-next-number {
	opacity:0.5;
}
.edit-next-number:hover {
	opacity:1;
	cursor:pointer;
}

/* Preview */

body.woocommerce_page_wpo_wcpdf_options_page {
	background: #fff;
}

.wrap [class$="icon32"] + h2 {
	font-size: 18px;
	padding: 1em;
}

.wrap .notice {
	margin: 15px 0 0;
}

.nav-tab-wrapper a.nav-tab {
	background: transparent;
	border: none;
	border-bottom: 3px solid transparent;
	padding: 1em 0em;
	margin: 0 1.2em;
	font-size: 15px;
}

.nav-tab-wrapper a.nav-tab.nav-tab-active {
	border-bottom: 3px solid #51266b;
}

#wpo-wcpdf-preview-wrapper {
	width: 100%;
	height: auto;
	position: relative;
	display: flex;
	align-items: flex-start;
}

#wpo-wcpdf-preview-wrapper .sidebar,
#wpo-wcpdf-preview-wrapper .preview-document {
	transition: .3s ease-in-out;
}

#wpo-wcpdf-preview-wrapper .sidebar {
	height: auto;
	padding: 4em 0 0 0;
	box-sizing: border-box;
	background: transparent;
	flex: 0 0 35%;
}

#wpo-wcpdf-preview-wrapper .sidebar > form {
	background: white;
	overflow: hidden;
	padding: 0;
	margin-left: 2em;
	box-sizing: border-box;
	width: calc(100% - 4em);
	max-width: 50vw;
}

#wpo-wcpdf-preview-wrapper .sidebar > form.editor {
	max-width: none;
}

#wpo-wcpdf-preview-wrapper .sidebar .form-table,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > th,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > th,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td {
	display: block;
	width: 100%;
	padding: 0;
}

#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > th,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > th {
	padding-bottom: 0.6em;
}

#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td {
	padding-bottom: 2.4em;
}

#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td > p.description,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td p.description {
	font-size: 0.85em;
	padding-top: 0.7em;
}

#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td > input[type="text"],
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td > input[type="text"],
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td > select,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td > select,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td > textarea,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td > textarea {
	max-width: none;
	width: 100%;
}

#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td > input[type="text"],
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td > input[type="text"] {
	width: 100% !important;
}

#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td > input#next_invoice_number {
	width: auto !important;
}

#wpo-wcpdf-preview-wrapper[data-preview-states="1"] .sidebar .form-table,
#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="closed"] .sidebar .form-table {
	display: table;
}

#wpo-wcpdf-preview-wrapper[data-preview-states="1"] .sidebar .form-table tbody,
#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="closed"] .sidebar .form-table tbody {
	display: table-row-group;
}

#wpo-wcpdf-preview-wrapper[data-preview-states="1"] .sidebar .form-table tr,
#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="closed"] .sidebar .form-table tr,
#wpo-wcpdf-preview-wrapper[data-preview-states="1"] .sidebar .form-table tbody tr,
#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="closed"] .sidebar .form-table tbody tr {
	display: table-row;
}

#wpo-wcpdf-preview-wrapper[data-preview-states="1"] .sidebar .form-table > tbody > tr > th,
#wpo-wcpdf-preview-wrapper[data-preview-states="1"] .sidebar .form-table > tbody > tr > td,
#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="closed"] .sidebar .form-table > tbody > tr > th,
#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="closed"] .sidebar .form-table > tbody > tr > td {
	display: table-cell !important;
	padding: 15px 10px 15px 0px !important;
	width: auto;
}

#wpo-wcpdf-preview-wrapper[data-preview-states="1"] .sidebar .form-table > tbody > tr > th,
#wpo-wcpdf-preview-wrapper[data-preview-states="1"] .wcpdf_document_settings_sections ul, 
#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="closed"] .sidebar .form-table > tbody > tr > th,
#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="closed"] .wcpdf_document_settings_sections ul {
	width: 300px !important;
}
/* ... */

